src/test/resources/semantic/reject/elseStatementStringType.ul
void main() {
}

void foo() {
    string condition;

    if (condition) {
    } else {
    }
}
